2008-03-04  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems/remote_fetcher.rb: Moved #download from
	DependencyInstaller.
	* lib/rubygems/commands/fetch_command.rb: Updated to use #download.
	* lib/rubygems/dependency_installer.rb: install now takes name or dep.
	Renamed gather_specs_to_download to find_spec_by_name_and_version.
	Modifed #initialize to not take gem name or version.

2008-03-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package*:  Removed #open_from_io and friends, switched
	to #open, no special handling for file names.
	* lib/rubygems/package/tar_output.rb:  Refactored ::open to use
	instance methods.
	* lib/rubygems/remote_fetcher.rb:  Print out number of requests made
	before connection reset.
	
2008-02-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package/tar_reader/entry.rb:  Removed is_directory and
	is_file? in favor of file? and directory?.

2008-02-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package.rb:  Broke up Tar bits into separate files.
	* lib/rubygems/package/tar_reader/entry.rb:  Don't copy TarHeader data
	into Entry, go through #header instead.  Better tests for
	TarReader::Entry.

2008-02-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Automatically fall back to
	local-only install on network error.  Fixes bug #15759 by Chauk-Mean P.
	* lib/rubygems/source_index.rb:  Process spec dirs so that earlier
	dirs override later dirs.  Fixes bug #14816 by Kurt Stephens.

2008-02-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb:  Only update gems that need
	updates.  Fixes bug #14780 by Mathieu Lajugie.  Don't force
	remote-only updates.  Properly handle dependencies when updating.
	Fixes bug #17488 by Hongli Lai.
	* lib/rubygems/commands/environment_command.rb:  Display path as a
	usable path.
	* lib/rubygems.rb:  Don't add APPLE_GEM_HOME with ENV['GEM_HOME'].

2008-02-25  Eric Hodel  <drbrain@segment7.net>
